Fixed Text Overflow

--- a/assets/css/hymn_viewer.css
+++ b/assets/css/hymn_viewer.css
@@ -1,29 +1,30 @@
 body {
-  font-family: "CMG Sans";
-  font-weight: bold;
+	font-family: "CMG Sans";
+	font-weight: bold;
 }
 
 .hymncontainer {
-  position: absolute;
-  background-size: cover;
-  background-color: rgba(41, 91, 160, 1);
-  position:relative;
-  width: 1940px;
-  height: 1100px;
-  border: 1px solid #999;
-  overflow: hidden;
-  color: #eee;
-  z-index: 2;
+	background-size: cover;
+	background-color: rgba(41, 91, 160, 1);
+	position: relative;
+	width: 1940px;
+	height: 1100px;
+	border: 1px solid #999;
+	overflow: hidden;
+	color: #eee;
+	z-index: 2;
+	padding: 100px;
 }
 
 
 .hymncontainer img {
-  position: absolute;
-  width:100%;
-  filter: blur(5px) grayscale(100%);
-  object-fit: fill;
-  opacity: .3;
-  z-index: -1;
+	position: absolute;
+	width:100%;
+	filter: blur(5px) grayscale(100%);
+	object-fit: fill;
+	opacity: .3;
+	z-index: -1;
+	margin: -100px; /* This should be the negative of .hymncontainer margin */
 }
 
 @media (min-width: 576px) {
@@ -33,7 +34,7 @@ body {
 @media (min-width: 768px) {
 	.hymncontainer.bootstrapcontainer {
 		width: 690px;
-	  	height: 388px;
+		height: 388px;
 
 	}
 }
@@ -41,7 +42,7 @@ body {
 @media (min-width: 992px) {
 	.hymncontainer.bootstrapcontainer {
 		width: 930px;
-	   height: 523px;
+		 height: 523px;
 
 	}
 }
@@ -49,34 +50,34 @@ body {
 @media (min-width: 1200px) {
 	.hymncontainer.bootstrapcontainer {
 		width: 1280px;
-	   height: 720px;
+		 height: 720px;
 
 	}
 }
 
 .fixedcontainer {
-  position:fixed;
-  top:0;
-  right:0;
+	position:fixed;
+	top:0;
+	right:0;
 }
 
 #hymnbox {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border: 0px solid #999;
-  overflow: visible;
-  white-space: nowrap;
-  font-size: 68px;
-  z-index: 8;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	border: 0px solid #999;
+	overflow: visible;
+	white-space: nowrap;
+	font-size: 68px;
+	z-index: 8;
 }
 #hymntext {
-  position:relative;
-  display: flex;
+	position:relative;
+	display: flex;
 	/* Comment out the next line ot remove weird centering thing. */
-  margin: 0px;
-  padding: 50px 65px;
-  z-index: 10;
+	margin: 0px;
+	/*padding: 50px 65px;*/
+	z-index: 10;
 }
 
 .hymncontainer:fullscreen {
@@ -89,9 +90,9 @@ body {
 
 .infobox {
 	font-size: 1.3em;
-   font-family: "CMG Sans";
-   font-weight: normal;
-   position:absolute;
-   bottom:30px;
-   right:30px;
+	 font-family: "CMG Sans";
+	 font-weight: normal;
+	 position:absolute;
+	 bottom:30px;
+	 right:30px;
 }
